hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_is_as.php.exp
File "valid_targ_wildcard_is_as.php", line 8, characters 12-12:
Wildcard typehints are not allowed in this position (Naming[2084])
